# spa-test

./: .env.example  README.md  docker-compose.yml
backend/: Dockerfile  check_db.py  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 927712e2ed13_add_fk.py  e6ab308a1720_init_tables.py
backend/app/: main.py
backend/app/api/: export.py  part_router.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/models/: history.py  part.py
backend/app/repositories/: part_repository.py
backend/app/schemas/: part.py
backend/app/services/: export_service.py  part_service.py
backend/tests/: conftest.py  test_export.py  test_parts.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: main.ts  style.css
frontend/src/assets/: main.css
frontend/src/components/: DeleteModal.vue  PartForm.vue  PartModal.vue  PartRow.vue
frontend/src/router/: index.ts
frontend/src/store/: parts.ts
frontend/src/types/: part.ts
frontend/src/views/: Home.vue
