[tool.poetry]
name = "spa-test"
version = "0.1.0"
description = ""
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"
sqlalchemy = "^2.0.49"
psycopg = { extras = ["binary"], version = "^3.3.3" }
alembic = "^1.18.4"
openpyxl = "^3.1.5"
reportlab = "^4.4.10"
pydantic-settings = "^2.14.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
